--- a/opd.css
+++ b/opd.css
@@ -92,15 +92,17 @@ body {
     background: #fff;
     padding: 8px 20px;
     margin-top: 5px;
-    width: 200px;
+    height:40px;
+    width: 120px;
     cursor: pointer;
     background: #ff5064;
     color: #fff;
-    font-size: 18px;
+    font-size:1rem;
     font-weight: 400;
     border: none;
     text-transform: uppercase;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
+    text-align: center;
 }
 
 .container .formBx form .inputBox button:focus {
